Fix icon alignment

--- a/src/components/banner/banner.module.css
+++ b/src/components/banner/banner.module.css
@@ -22,7 +22,6 @@
 }
 .bannerIcon {
   display: flex;
-  align-items: center;
   color: #cdad7d;
   font-size: 1.4rem;
 }
